[gd_scene format=3 uid="uid://c8yvn2qkt5fhd"]

[ext_resource type="Script" path="res://scripts/playground/ui/ItemTooltip.gd" id="1_item_tooltip"]

[node name="ItemTooltip" type="PanelContainer"]
visible = false
z_index = 200
custom_minimum_size = Vector2(180, 0)
script = ExtResource("1_item_tooltip")
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ItemNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "아이템 이름"

[node name="TierLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "일반"

[node name="StatsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "보너스 없음"

[node name="EnhanceLabel" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "강화: +0"
